[package]
name = "distributor"
version = "0.1.0"
authors = ["Nevin Zheng <nevzheng@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
hyper-staticfile = "0.6.0"
http = "0.2.4"
tokio = { version = "1", features = ["full"] }
clap = "2.33.3" # CLI Arg Parser
futures = "0.3.13"
lazy_static = "1.4.0"
regex = "1.4.5"
bytes = "1"
structopt = "0.3.14"
tracing = "0.1.13"
tracing-futures = { version = "0.2.3" }
tracing-subscriber = "0.2.2"
